recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.error
DragonCurve2:14: error: value Blue is not a member of object java.awt.Color
    	case 1 => setCouleur(Color.Blue)
                                   ^